[package]
name = "pyrus-decision-tree"
version = "0.1.0"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
keywords = ["machine learning", "decision tree", "data science"]

[lib]
name = "pyrus_decision_tree"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
derive_more = "^0.13"
float-cmp = "^0.4"
itertools = "^0.8.0"
streaming-stats = "0.2.2"
pyo3 = { version = "^0.5", features = ["extension-module"] }
